--- a/client/src/components/styles/App.css
+++ b/client/src/components/styles/App.css
@@ -6,8 +6,7 @@
   z-index: 5;
 }
 
-.imageSelectorContainer,
-.imageSelectorContainerHidden {
+.imageSelectorContainer {
   position: absolute;
   bottom: 80px;
   right: 50px;
@@ -16,10 +15,19 @@
   z-index: 5;
 }
 
-.imageSelectorContainerHidden {
-  display: none;
+.imageSelectorModalBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  outline: 0;
+  background: transparent;
+  z-index: 4;
 }
 
+.imageSelectorModalBackgroundHidden,
+.imageSelectorContainerHidden,
 .imageSelectorContainer::-webkit-scrollbar {
   display: none;
 }
@@ -28,7 +36,5 @@
   position: absolute;
   bottom: 40px;
   right: 50px;
-  /* height: 20px;
-  width: 100px; */
   z-index: 5;
 }
