--- a/client/src/components/styles/Background.css
+++ b/client/src/components/styles/Background.css
@@ -1,5 +1,6 @@
 .backgroundImage0,
 .backgroundImage1 {
+  background: rgb(53, 53, 53);
   background-size: cover;
   background-position: center;
   position: absolute;
