--- a/client/src/components/styles/App.css
+++ b/client/src/components/styles/App.css
@@ -33,6 +33,7 @@
 }
 
 .imageSelectorDisplayButton {
+  display: none;
   position: absolute;
   bottom: 40px;
   right: 50px;
@@ -46,13 +47,19 @@
 
 .imageSelectorDisplayButtonV2 {
   position: absolute;
-  right: 200px;
+  /* right: 200px; */
   bottom: 40px;
+  right: 50px;
   z-index: 5;
   /* border: 1px solid white; */
   width: calc((var(--image-selector-display-button-size) * 2) + var(--image-selector-display-button-margin));
   height: calc((var(--image-selector-display-button-size) * 2) + var(--image-selector-display-button-margin));
   cursor: pointer;
+}
+
+.imageSelectorDisplayButtonV2:active {
+  transform: scale(0.95);
+  transition: all 0.2s;
 }
 
 .imageSelectorDisplayButtonUpperLeftHover,
@@ -77,6 +84,8 @@
 .imageSelectorDisplayButtonLowerRightHover,
 .imageSelectorDisplayButtonLowerLeftHover {
   opacity: 0.7;
+  box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.5);
+  /* box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.5); */
 }
 
 
