Improve thumbnail appearance and layout

--- a/client/src/components/styles/ImageThumbnail.css
+++ b/client/src/components/styles/ImageThumbnail.css
@@ -1,4 +1,9 @@
 .thumbnailContainer {
   display: inline-block;
   user-select: none;
+  margin: 10px;
+}
+
+.imageThumbnail {
+  border-radius: 12px;
 }
