--- a/client/src/components/styles/ImageSelector.css
+++ b/client/src/components/styles/ImageSelector.css
@@ -1,4 +1,42 @@
 .imageSelectorContainer {
   position: relative;
+  padding: 20px;
+  height: 500px;
   z-index: 5;
+}
+
+.imageSelectorBackground {
+  /* display: none; */
+  background-color: black;
+  opacity: 0.5;
+  position: absolute;
+  border-radius: 20px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid green; */
+  z-index: 6;
+}
+
+.thumbnailContainer {
+  position: relative;
+  height: 400px;
+  overflow-y: scroll;
+  /* overflow: overlay; */
+  /* border: 1px solid white; */
+  z-index: 7;
+}
+
+.thumbnailContainer::-webkit-scrollbar {
+  width: 10px;
+}
+
+.thumbnailContainer::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+}
+
+.thumbnailContainer::-webkit-scrollbar-track {
+  display: none;
 }
