--- a/client/src/components/styles/ImageSelector.css
+++ b/client/src/components/styles/ImageSelector.css
@@ -1,12 +1,13 @@
 .imageSelectorContainer {
   position: relative;
-  padding: 20px;
-  height: 500px;
+  padding: 35px 15px 35px 25px;
+  height: 520px;
+  /* backdrop-filter: blur(2px); */
+  /* border: 1px solid white; */
   z-index: 5;
 }
 
 .imageSelectorBackground {
-  /* display: none; */
   background-color: black;
   opacity: 0.5;
   position: absolute;
@@ -15,16 +16,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  /* border: 1px solid green; */
   z-index: 6;
 }
 
 .thumbnailContainer {
   position: relative;
-  height: 400px;
+  height: 450px;
   overflow-y: scroll;
-  /* overflow: overlay; */
-  /* border: 1px solid white; */
+  padding-right: 5px;
   z-index: 7;
 }
 
@@ -35,6 +34,14 @@
 .thumbnailContainer::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
+}
+
+.thumbnailContainer::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.thumbnailContainer::-webkit-scrollbar-thumb:active {
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .thumbnailContainer::-webkit-scrollbar-track {
